# Machine-Learning

./: README.md  app.py  piso.csv  pyproject.toml  testes.ipynb
